# fit-assets

./: README.md  pyproject.toml
.github/workflows/: contract-tests.yml
fit_assets/: resources.py  resources.qrc
fit_assets/mitmproxy/: mitmproxy-ca-cert.pem
fit_assets/templates/: content.html  front.html  template_email.html  template_pec.html  template_verification.html  template_web.html  template_web_no_whois.html
fit_assets/workflows/: update-version.yml
tests/contract/: test_mitmproxy_certificate_contract.py  test_resources_contract.py  test_templates_contract.py
