[tool.poetry]
name = "fit-assets"
version = "0.1.1"
description = "Assets (icons, images, resources) for the FIT project"
authors = ["FIT Project"]
packages = [
    { include = "fit_assets" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
PySide6 = "6.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
